--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ body {
   padding: 20px 45px;
   overflow: hidden;
   background-color: rgb(125, 128, 138);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 article,
 aside,
